--- a/templates/login.html
+++ b/templates/login.html
@@ -20,13 +20,8 @@
 
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-    <label for="username_id"><b>Username</b></label>
-    <input id="username_id" type="text" placeholder="Username" name="username" required>
+    {{ authenticationForm }}
 
-    <label for="password_id"><b>Password</b></label>
-    <input id="password_id" type="password" placeholder="Password" name="password" required>
-
-    <!-- <input type="submit" value="login"> -->
     <input type="hidden" name="next" value="{{ next }}">
     <button type="submit">Login</button>
   </form>
